[gd_scene load_steps=19 format=3 uid="uid://ky1b120jiiae"]

[ext_resource type="Texture2D" uid="uid://cxegnvig5kl64" path="res://art/Custom/mace.png" id="1_komst"]
[ext_resource type="Script" path="res://gameObjects/player/playerWeapons/mace/mace.gd" id="1_rm5fy"]
[ext_resource type="Texture2D" uid="uid://cea0lwerhsy40" path="res://art/Custom/maceslash_final.png" id="2_7wnju"]
[ext_resource type="Texture2D" uid="uid://ce61w072tsfma" path="res://art/Enemies/enemies x1.png" id="3_pflk3"]
[ext_resource type="AudioStream" uid="uid://cvxybw8kp2kua" path="res://sfx/Space_Ambience_and_Sound_Pack/Laser_Sword/Laser_Sword_Deploy.wav" id="5_tkrw5"]
[ext_resource type="AudioStream" uid="uid://b6w231mm7ait8" path="res://sfx/Space_Ambience_and_Sound_Pack/Laser_Sword/Laser_Sword_Swing_2.wav" id="6_6g6qt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8b6ha"]
radius = 16.0
height = 130.0

[sub_resource type="AtlasTexture" id="AtlasTexture_mce7x"]
atlas = ExtResource("2_7wnju")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0clff"]
atlas = ExtResource("2_7wnju")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vsa1"]
atlas = ExtResource("2_7wnju")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fm7h7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mce7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0clff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vsa1")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_07e75"]
radius = 37.6563

[sub_resource type="AtlasTexture" id="AtlasTexture_fjoas"]
atlas = ExtResource("3_pflk3")
region = Rect2(128, 768, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cf0sc"]
atlas = ExtResource("3_pflk3")
region = Rect2(160, 768, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsh38"]
atlas = ExtResource("3_pflk3")
region = Rect2(192, 768, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v374u"]
atlas = ExtResource("3_pflk3")
region = Rect2(224, 768, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_276q3"]
atlas = ExtResource("3_pflk3")
region = Rect2(288, 768, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_tjie4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjoas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf0sc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsh38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v374u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_276q3")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="mace" type="Node2D"]
rotation = 1.5708
script = ExtResource("1_rm5fy")

[node name="mainSwingArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="mainSwingArea"]
position = Vector2(-37, 0.000133514)
shape = SubResource("CapsuleShape2D_8b6ha")
disabled = true

[node name="Sprite2D" type="AnimatedSprite2D" parent="mainSwingArea"]
visible = false
position = Vector2(-31.4687, -1.01305)
rotation = 1.5708
scale = Vector2(3.86144, 2.70976)
sprite_frames = SubResource("SpriteFrames_fm7h7")
frame = 2
frame_progress = 1.0
flip_v = true

[node name="finalSwingArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="finalSwingArea"]
position = Vector2(-38, 1.90735e-06)
shape = SubResource("CircleShape2D_07e75")
disabled = true

[node name="Sprite2D" type="AnimatedSprite2D" parent="finalSwingArea"]
visible = false
position = Vector2(-38, 0)
scale = Vector2(1.96744, 1.96744)
sprite_frames = SubResource("SpriteFrames_tjie4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_komst")

[node name="swingTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="cooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="timeoutTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="SFX" type="Node" parent="."]

[node name="readySound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_tkrw5")
bus = &"SFX"

[node name="shootSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_6g6qt")
bus = &"SFX"

[connection signal="body_entered" from="mainSwingArea" to="." method="_on_main_swing_area_body_entered"]
[connection signal="body_entered" from="finalSwingArea" to="." method="_on_final_swing_area_body_entered"]
[connection signal="body_exited" from="finalSwingArea" to="." method="_on_final_swing_area_body_exited"]
[connection signal="body_shape_entered" from="finalSwingArea" to="." method="_on_final_swing_area_body_shape_entered"]
[connection signal="timeout" from="swingTimer" to="." method="_on_swing_timer_timeout"]
[connection signal="timeout" from="cooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="timeoutTimer" to="." method="_on_timeout_timer_timeout"]
